--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,18 @@ build/
 ### VS Code ###
 .vscode/
 
-## maven-wrapper
+
+## Maven
+##########
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+pom.xml.bak
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
-.mvn/wrapper/maven-wrapper.properties
 
