adding config server

--- a/spring-microservices/department-service/src/main/resources/application.properties
+++ b/spring-microservices/department-service/src/main/resources/application.properties
@@ -1,12 +1,21 @@
 spring.application.name=DEPARTMENT-SERVICE
 
-spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-spring.datasource.username=root
-spring.datasource.password=sudip07
+#configuring config server details
+spring.config.import=optional:configserver:http://localhost:8888
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-server.port=8080
+# Include all endpoints 
+management.endpoints.web.exposure.include=*
 
-# configuration euraka endpoints
-euraka.instance.client.serverUrl.defaultZone=http://localhost:8761/euraka/
+# commenting below properties as it will be picked up from github, 
+# keeping only the application name property as this will help to identify the unique application
+
+# spring.datasource.url=jdbc:mysql://localhost:3306/department_db
+# spring.datasource.username=root
+# spring.datasource.password=sudip07
+
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# spring.jpa.hibernate.ddl-auto=update
+# server.port=8080
+
+# # configuration euraka endpoints
+# euraka.instance.client.serverUrl.defaultZone=http://localhost:8761/euraka/
