--- a/spring-microservices/employee-service/pom.xml
+++ b/spring-microservices/employee-service/pom.xml
@@ -56,8 +56,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 	</dependencies>
- <!-- dependencyManagement block added for spring cloud related dependencis -->
+	<!-- dependencyManagement block added for spring cloud related dependencis -->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
