--- a/spring-microservices/employee-service/src/main/resources/application.properties
+++ b/spring-microservices/employee-service/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 spring.application.name=EMPLOYEE-SERVICE
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
-spring.datasource.username=root
-spring.datasource.password=sudip07
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-
-server.port=8082
+#configuring config server details
+spring.config.import=optional:configserver:http://localhost:8888
 
 
-# configuration euraka endpoints
-euraka.instance.client.serverUrl.defaultZone=http://localhost:8761/euraka/
+
+# spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+# spring.datasource.username=root
+# spring.datasource.password=sudip07
+
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# spring.jpa.hibernate.ddl-auto=update
+
+# server.port=8082
+
+
+# # configuration euraka endpoints
+# euraka.instance.client.serverUrl.defaultZone=http://localhost:8761/euraka/
