--- a/spring-microservices/department-service/src/main/resources/application.properties
+++ b/spring-microservices/department-service/src/main/resources/application.properties
@@ -19,3 +19,9 @@ management.endpoints.web.exposure.include=*
 
 # # configuration euraka endpoints
 # euraka.instance.client.serverUrl.defaultZone=http://localhost:8761/euraka/
+
+# configuring rabbitmq server details
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
