--- a/spring-microservices/employee-service/src/main/resources/application.properties
+++ b/spring-microservices/employee-service/src/main/resources/application.properties
@@ -3,8 +3,6 @@ spring.application.name=EMPLOYEE-SERVICE
 #configuring config server details
 spring.config.import=optional:configserver:http://localhost:8888
 
-
-
 # spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
 # spring.datasource.username=root
 # spring.datasource.password=sudip07
@@ -17,3 +15,10 @@ spring.config.import=optional:configserver:http://localhost:8888
 
 # # configuration euraka endpoints
 # euraka.instance.client.serverUrl.defaultZone=http://localhost:8761/euraka/
+
+
+# configuring rabbitmq server details
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
