--- a/spring-microservices/employee-service/src/main/resources/application.properties
+++ b/spring-microservices/employee-service/src/main/resources/application.properties
@@ -22,3 +22,24 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+
+# Actuator endpoints for Circuit Breaker
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+# Circuit Breaker configuration
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowType=COUNT_BASED
+
+# Retry configuration
+resilience4j.retry.instances.EMPLOYEE-SERVICE.registerHealthIndicator=true
+resilience4j.retry.instances.EMPLOYEE-SERVICE.maxRetryAttempts=5
+resilience4j.retry.instances.EMPLOYEE-SERVICE.waitDuration=1s
