--- a/spring-microservices/api-gateway/src/main/resources/application.properties
+++ b/spring-microservices/api-gateway/src/main/resources/application.properties
@@ -34,3 +34,10 @@ spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
 # below predicate will be used by gateway to determine actual url of department service
 # example http://localhost:9092/api/departments
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
+
+# routes for organization service
+spring.cloud.gateway.routes[2].id=ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].uri=lb://ORGANIZATION-SERVICE
+# below predicate will be used by gateway to determine actual url of organization service
+# example http://localhost:9092/api/departments
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organizations/**
