adding react front end

--- a/spring-microservices/api-gateway/src/main/resources/application.properties
+++ b/spring-microservices/api-gateway/src/main/resources/application.properties
@@ -41,3 +41,7 @@ spring.cloud.gateway.routes[2].uri=lb://ORGANIZATION-SERVICE
 # below predicate will be used by gateway to determine actual url of organization service
 # example http://localhost:9092/api/departments
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organizations/**
+
+# adding CORS properties
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE
